test/netlist/error/any-input.bop
A(_) = b
where
  b = Vdd();
end where;
